# TCO-Ringbeller

./: CMakeLists.txt
app/: CMakeLists.txt
app/src/: cli.cpp  cli.hpp  main.cpp  tests.cpp
app/src/neither/: COMMIT
lib/: CMakeLists.txt
lib/include/: message.hpp  parser.hpp  read.hpp  write.hpp
lib/include/messages/: at.hpp  at_cmgf.hpp  atd.hpp  ati.hpp  create.hpp
lib/src/: parser.cpp
test/: CMakeLists.txt
test/src/: sync_read.cpp  sync_write.cpp  tests.cpp
